part4/e401/log-pong/log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: log-output # This is the app as declared in the deployment.
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 7777
